@@ -1,5 +1,10 @@
 2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* Added tabs for choosing and creating characters.
+	* Added functionality for creating characters through the gui. The list of possible types are hard coded though (to only include "settler").
+
+2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Refactor create character code to a separate method.
 
 2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>
